tests/errors/references_errors.ctp

def (main:
    x : const:auto:ref = 1
    y : mut:int:ref = x
)
    